--- a/TodoList/Base.lproj/Main.storyboard
+++ b/TodoList/Base.lproj/Main.storyboard
@@ -25,6 +25,15 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
+                                <view key="backgroundView" contentMode="scaleToFill" id="1RK-0Q-0Ch">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="769"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    <gestureRecognizers/>
+                                    <connections>
+                                        <outletCollection property="gestureRecognizers" destination="sC8-c6-bZr" appends="YES" id="v8V-jp-QUG"/>
+                                    </connections>
+                                </view>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TodoListCell" id="zMR-ih-2eg" customClass="TodoListCell" customModule="TodoList" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="414" height="90"/>
@@ -112,6 +121,7 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="bx0-LT-Q56" firstAttribute="centerY" secondItem="3sY-ig-xV7" secondAttribute="centerY" id="9PA-j0-Kzh"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bx0-LT-Q56" secondAttribute="trailing" constant="20" symbolic="YES" id="Bjw-2h-RuI"/>
                                         <constraint firstItem="bx0-LT-Q56" firstAttribute="leading" secondItem="3sY-ig-xV7" secondAttribute="leading" constant="20" id="ff3-nF-QUb"/>
                                     </constraints>
                                     <connections>
@@ -123,12 +133,61 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="T7D-hv-yew"/>
                                 </connections>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TU3-V1-0Lg">
+                                <rect key="frame" x="0.0" y="753" width="414" height="60"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pTe-CA-NUn">
+                                        <rect key="frame" x="8" y="8" width="280" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afD-CR-NVM">
+                                        <rect key="frame" x="316" y="12.5" width="39" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="K6e-y1-C1w"/>
+                                        </constraints>
+                                        <color key="tintColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="today"/>
+                                        <connections>
+                                            <action selector="isTodayButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d5D-gD-cRE"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m7K-YB-anE">
+                                        <rect key="frame" x="363" y="12.5" width="35" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="6yr-Me-CY5"/>
+                                            <constraint firstAttribute="width" constant="35" id="Jdw-xR-NaC"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="plus" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="24"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="addTaskButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LvO-vw-iKe"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="secondarySystemFillColor" red="0.47058823529999999" green="0.47058823529999999" blue="0.50196078430000002" alpha="0.16" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="m7K-YB-anE" firstAttribute="centerY" secondItem="TU3-V1-0Lg" secondAttribute="centerY" id="2qz-a8-T5R"/>
+                                    <constraint firstAttribute="trailing" secondItem="m7K-YB-anE" secondAttribute="trailing" constant="16" id="WYP-fH-K0X"/>
+                                    <constraint firstItem="afD-CR-NVM" firstAttribute="leading" secondItem="pTe-CA-NUn" secondAttribute="trailing" constant="28" id="YDT-OR-miO"/>
+                                    <constraint firstAttribute="height" constant="60" id="aG7-R5-Kvo"/>
+                                    <constraint firstItem="m7K-YB-anE" firstAttribute="leading" secondItem="afD-CR-NVM" secondAttribute="trailing" constant="8" id="cfb-xe-b5z"/>
+                                    <constraint firstItem="pTe-CA-NUn" firstAttribute="centerY" secondItem="TU3-V1-0Lg" secondAttribute="centerY" constant="-5" id="cx5-V3-azn"/>
+                                    <constraint firstItem="pTe-CA-NUn" firstAttribute="leading" secondItem="TU3-V1-0Lg" secondAttribute="leading" constant="8" id="oST-MW-m9A"/>
+                                    <constraint firstItem="afD-CR-NVM" firstAttribute="centerY" secondItem="m7K-YB-anE" secondAttribute="centerY" id="pP3-w1-A5c"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="Dac-Tr-eM7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3ru-NF-H7J"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TU3-V1-0Lg" secondAttribute="trailing" id="Enk-u1-GN1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Dac-Tr-eM7" secondAttribute="trailing" id="Jc1-hm-UUY"/>
+                            <constraint firstItem="TU3-V1-0Lg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JdJ-Km-ylA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TU3-V1-0Lg" secondAttribute="bottom" id="dOv-dD-17G"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Dac-Tr-eM7" secondAttribute="bottom" id="fRW-VT-pQx"/>
                             <constraint firstItem="Dac-Tr-eM7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="obK-Os-arc"/>
                         </constraints>
@@ -136,12 +195,21 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Tasks" image="checkmark.circle.fill" catalog="system" id="zan-H5-GGu"/>
                     <connections>
+                        <outlet property="addButton" destination="m7K-YB-anE" id="Gdb-Qn-yn3"/>
                         <outlet property="collectionView" destination="Dac-Tr-eM7" id="MeX-33-IFU"/>
+                        <outlet property="inputTextField" destination="pTe-CA-NUn" id="7SG-09-8Bl"/>
+                        <outlet property="inputViewBottom" destination="dOv-dD-17G" id="alN-t0-IuL"/>
+                        <outlet property="isTodayButton" destination="afD-CR-NVM" id="Ngb-2y-2t5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="sC8-c6-bZr">
+                    <connections>
+                        <action selector="tapBG:" destination="BYZ-38-t0r" id="L9r-Nf-qVO"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="368" y="204"/>
+            <point key="canvasLocation" x="366.66666666666669" y="203.57142857142856"/>
         </scene>
         <!--Settings-->
         <scene sceneID="L1E-H0-cIL">
@@ -244,6 +312,7 @@
         <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
         <image name="circle" catalog="system" width="128" height="121"/>
         <image name="gear" catalog="system" width="128" height="119"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
         <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
     </resources>
 </document>
